--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     "@type": "LocalBusiness",
     "name": "Soft Touch Carpets & Elegant Edges",
     "description": "Carpet fitting, stair runner installation, vinyl flooring, and mat whipping services in Hertfordshire. Over 40 years of experience.",
-    "telephone": "+44 7777 000000",
+    "telephone": "+44 7768 106205",
     "address": {
       "@type": "PostalAddress",
       "streetAddress": "2 Warren Close",
@@ -59,11 +59,13 @@
 <body>
 
   <!-- NAVBAR (Sticky) -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-brown sticky-top shadow-sm py-3">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-brown sticky-top shadow-sm ">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="#">
-        Soft Touch Carpets &amp; Elegant Edges
+      <a class="navbar-brand d-flex flex-column text-lg-start" href="index.html">
+        <span class="fw-bold fs-5">Soft Touch</span>
+        <span class="fs-6">Carpets & Elegant Edges</span>
       </a>
+      
       <button 
         class="navbar-toggler" 
         type="button" 
@@ -79,7 +81,7 @@
       <div class="collapse navbar-collapse justify-content-end" id="mainNavbar">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" href="#">Home</a>
+            <a class="nav-link active" href="index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about.html">About</a>
@@ -104,7 +106,9 @@
         Premium carpet fitting, stair runners, and bespoke mat services 
         for Hertfordshire &amp; beyond. Over 40 years of transforming homes.
       </p>
-      <a href="services.html" class="btn btn-tan btn-lg">Explore Our Services</a>
+      <a href="services.html" class="btn btn-tan btn-lg">
+        Explore Our Services
+      </a>
     </div>
   </header>
 
@@ -124,7 +128,7 @@
           <p class="fs-5 mb-4">
             At Soft Touch Carpets &amp; Elegant Edges, we bring four decades of experience, 
             NVQ-qualified fitters, and a passion for design to every project. Our family-run 
-            ethos ensures you get personal, attentive service—no matter the size or scope of your flooring needs.
+            ethos ensures you get personal, attentive service—no matter the size or scope.
           </p>
           <ul class="list-unstyled">
             <li class="mb-2"><strong>40+ years</strong> in the flooring industry</li>
@@ -147,8 +151,8 @@
           <h2 class="section-heading">Crafted With Care</h2>
           <p class="fs-5">
             Whether it’s plush carpeting, sleek vinyl floors, or a statement stair runner, 
-            our dedicated team ensures each detail is meticulously handled. Discover a glimpse 
-            of what we offer below.
+            our dedicated team ensures every detail is handled meticulously. 
+            Discover a glimpse of what we offer below.
           </p>
         </div>
       </div>
@@ -165,7 +169,9 @@
             <p class="mt-2">
               From underlay to finish, we provide seamless installations that enhance comfort and style.
             </p>
-            <a href="services.html" class="btn btn-tan text-decoration-none">Learn More &rarr;</a>
+            <a href="services.html" class="btn btn-tan">
+              Schedule a Fitting &rarr;
+            </a>
           </div>
         </div>
         <div class="col-md-6 col-lg-4">
@@ -179,7 +185,9 @@
             <p class="mt-2">
               Transform your staircase into a luxurious focal point, with custom edging &amp; rods.
             </p>
-            <a href="services.html" class="btn btn-tan text-decoration-none">Learn More &rarr;</a>
+            <a href="services.html" class="btn btn-tan">
+              Upgrade Your Stairs &rarr;
+            </a>
           </div>
         </div>
         <div class="col-md-6 col-lg-4">
@@ -193,7 +201,9 @@
             <p class="mt-2">
               Sleek, water-resistant, and easy to maintain—ideal for busy kitchens &amp; bathrooms.
             </p>
-            <a href="services.html" class="btn btn-tan text-decoration-none">Learn More &rarr;</a>
+            <a href="services.html" class="btn btn-tan">
+              Discover Vinyl &rarr;
+            </a>
           </div>
         </div>
       </div>
@@ -208,47 +218,16 @@
         Free Measuring &amp; Expert Advice
       </h2>
       <p class="lead mb-4">
-        Let us handle the details. Our dedicated team will measure your space, offer tailored recommendations, 
-        and provide a clear, competitive quote.
+        Let us handle the details. Our dedicated team will measure your space, 
+        offer tailored recommendations, and provide a clear, competitive quote.
       </p>
-      <a href="contact.html" class="btn btn-tan btn-lg">Get Your Free Quote</a>
+      <a href="contact.html" class="btn btn-tan btn-lg">
+        Get Your Free Quote
+      </a>
     </div>
   </section>
 
-  <!-- TESTIMONIALS SECTION -->
-  <section class="py-5 bg-cream">
-    <div class="container">
-      <div class="row mb-5 text-center">
-        <div class="col-lg-8 mx-auto">
-          <h2 class="section-heading">What Our Clients Say</h2>
-          <p class="fs-5">
-            Real words from real homeowners who’ve trusted us with their floors. We value every review 
-            and strive to exceed your expectations every time.
-          </p>
-        </div>
-      </div>
-      <div class="row g-4">
-        <div class="col-md-6">
-          <div class="testimonial p-4 bg-white shadow-sm rounded">
-            <p class="mb-3">
-              "Soft Touch Carpets fitted our entire home. The living room 
-              carpet feels absolutely gorgeous underfoot. Highly recommended!"
-            </p>
-            <strong>– Sarah W., Welwyn Garden City</strong>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="testimonial p-4 bg-white shadow-sm rounded">
-            <p class="mb-3">
-              "The stair runner exceeded our expectations! Perfectly measured, expertly edged, 
-              and fitted without any hassle. Great service from start to finish."
-            </p>
-            <strong>– Dean P., St Albans</strong>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+  
 
   <!-- SERVICE AREAS SECTION -->
   <section class="py-5 bg-light">
@@ -278,6 +257,8 @@
     </div>
   </section>
 
+
+
   <!-- FINAL CTA SECTION -->
   <section class="py-5 text-center bg-cream">
     <div class="container">
@@ -288,15 +269,51 @@
         Transforming homes is our passion. Whether it’s carpet fitting, stair runners, 
         vinyl flooring, or custom mats, we have the expertise to bring your vision to life.
       </p>
-      <a href="contact.html" class="btn btn-tan btn-lg">Book Your Free Measure</a>
+      <a href="contact.html" class="btn btn-tan btn-lg">
+        Book Your Free Measure
+      </a>
     </div>
   </section>
-
+<!-- TESTIMONIALS SECTION: now with a brown background & white text -->
+<section class="py-5" style="background-color: var(--brown); color: #fff;">
+  <div class="container">
+    <div class="row mb-5 text-center">
+      <div class="col-lg-8 mx-auto">
+        <h2 class="section-heading text-white">What Our Clients Say</h2>
+        <p class="fs-5 text-white-50">
+          Real words from real homeowners who’ve trusted us with their floors. 
+          We value every review and strive to exceed your expectations.
+        </p>
+      </div>
+    </div>
+    <div class="row g-4">
+      <div class="col-md-6">
+        <div class="testimonial p-4 bg-white text-dark shadow-sm rounded">
+          <p class="mb-3">
+            "Soft Touch Carpets fitted our entire home. The living room 
+            carpet feels absolutely gorgeous underfoot. Highly recommended!"
+          </p>
+          <strong>– Sarah W., Welwyn Garden City</strong>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="testimonial p-4 bg-white text-dark shadow-sm rounded">
+          <p class="mb-3">
+            "The stair runner exceeded our expectations! Perfectly measured, 
+            expertly edged, and fitted without any hassle. Great service!"
+          </p>
+          <strong>– Dean P., St Albans</strong>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
   <!-- FOOTER -->
   <footer>
     <div class="container footer-content">
       <p>&copy; 2025 Soft Touch Carpets &amp; Elegant Edges</p>
       <p>Proudly serving Hertfordshire &amp; Surrounding Areas</p>
+      <p>Call: 07768 106205 | Email: <a href="mailto:info@softtouchcarpets.com" style="color:white;">info@softtouchcarpets.com</a></p>
     </div>
   </footer>
 
