--- a/contact.html
+++ b/contact.html
@@ -55,34 +55,45 @@
   </script>
 </head>
 <body>
-  <!-- NAVBAR -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-brown sticky-top shadow">
+  <!-- NAVBAR (Sticky) -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-brown sticky-top shadow-sm ">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="index.html">
-        Soft Touch Carpets &amp; Elegant Edges
+      <a class="navbar-brand d-flex flex-column text-lg-start" href="index.html">
+        <span class="fw-bold fs-5">Soft Touch</span>
+        <span class="fs-6">Carpets & Elegant Edges</span>
       </a>
+      
       <button 
         class="navbar-toggler" 
         type="button" 
         data-bs-toggle="collapse" 
-        data-bs-target="#navbarContent" 
-        aria-controls="navbarContent" 
+        data-bs-target="#mainNavbar" 
+        aria-controls="mainNavbar" 
         aria-expanded="false" 
         aria-label="Toggle navigation"
       >
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div class="collapse navbar-collapse justify-content-end" id="navbarContent">
+      <div class="collapse navbar-collapse justify-content-end" id="mainNavbar">
         <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-          <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-          <li class="nav-item"><a class="nav-link active" href="contact.html">Contact</a></li>
+          <li class="nav-item">
+            <a class="nav-link active" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="services.html">Services</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
         </ul>
       </div>
     </div>
   </nav>
+
 
   <!-- HERO / BANNER SECTION -->
   <header class="contact-hero d-flex align-items-center">
@@ -102,7 +113,7 @@
       <div class="row g-5 align-items-center">
         <div class="col-lg-6">
           <h2 class="section-heading mb-4" style="font-family: 'Playfair Display', serif;">
-            Get In Touch
+            Get a quote
           </h2>
           <p class="fs-5 mb-4">
             Whether you have a question about our carpet fitting, stair runner services, 
