--- a/services.html
+++ b/services.html
@@ -41,7 +41,7 @@
     "@type": "LocalBusiness",
     "name": "Soft Touch Carpets & Elegant Edges",
     "description": "Carpet fitting, stair runner installation, vinyl flooring, and custom mat services in Hertfordshire.",
-    "telephone": "+44 7777 000000",
+    "telephone": "+44 7768 106205",
     "address": {
       "@type": "PostalAddress",
       "streetAddress": "2 Warren Close",
@@ -57,37 +57,36 @@
 </head>
 <body>
 
-  <!-- NAVBAR -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-brown sticky-top shadow">
+  <!-- NAVBAR (Sticky) -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-brown sticky-top shadow-sm ">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="index.html">
-        Soft Touch Carpets &amp; Elegant Edges
+      <a class="navbar-brand d-flex flex-column text-lg-start" href="index.html">
+        <span class="fw-bold fs-5">Soft Touch</span>
+        <span class="fs-6">Carpets & Elegant Edges</span>
       </a>
+      
       <button 
         class="navbar-toggler" 
         type="button" 
         data-bs-toggle="collapse" 
-        data-bs-target="#navbarSupportedContent" 
-        aria-controls="navbarSupportedContent" 
+        data-bs-target="#mainNavbar" 
+        aria-controls="mainNavbar" 
         aria-expanded="false" 
         aria-label="Toggle navigation"
       >
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div 
-        class="collapse navbar-collapse justify-content-end" 
-        id="navbarSupportedContent"
-      >
+      <div class="collapse navbar-collapse justify-content-end" id="mainNavbar">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-link active" href="index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active fw-semibold" href="services.html">Services</a>
+            <a class="nav-link" href="services.html">Services</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
@@ -115,11 +114,7 @@
   </header>
 
   <!-- INTRO SECTION (WAVE DIVIDER TOP) -->
-  <div class="wave-divider wave-top">
-    <svg viewBox="0 0 500 50" preserveAspectRatio="none">
-      <path d="M0,0 C150,50 350,0 500,50 L500,00 L0,0 Z" style="fill:#FFFDF9;"></path>
-    </svg>
-  </div>
+ 
   <section class="services-intro-section py-5 bg-cream">
     <div class="container">
       <div class="row text-center mb-5">
@@ -130,7 +125,7 @@
           <p class="fs-5">
             Whether you need plush carpets, stylish stair runners, or durable vinyl for high-traffic areas, 
             Soft Touch Carpets &amp; Elegant Edges has you covered. We also provide bespoke mat whipping 
-            to make the most of your leftover materials. Explore our services below and discover why 
+            to make the most of your leftover materials. Explore our services below and see why 
             customers across Hertfordshire trust us for quality flooring.
           </p>
         </div>
@@ -138,15 +133,10 @@
     </div>
   </section>
 
-  <!-- WAVE DIVIDER BOTTOM -->
-  <div class="wave-divider wave-bottom">
-    <svg viewBox="0 0 500 50" preserveAspectRatio="none">
-      <path d="M0,50 C150,0 350,50 500,0 L500,50 L0,50 Z" style="fill:#FFFDF9;"></path>
-    </svg>
-  </div>
-
+ 
   <!-- SERVICE SECTION: CARPET FITTING -->
-  <section class="py-5 bg-light">
+  <!-- Using a brown background, white text for contrast -->
+  <section class="py-5" style="background-color: var(--brown); color: #fff;">
     <div class="container">
       <div class="row align-items-center mb-5">
         <div class="col-md-6 pe-md-5 mb-4 mb-md-0">
@@ -157,18 +147,21 @@
           >
         </div>
         <div class="col-md-6">
-          <h3 class="text-brown" style="font-family: 'Montserrat', sans-serif;">Carpet Fitting</h3>
+          <h3 style="font-family: 'Montserrat', sans-serif; color: #fff;">
+            Carpet Fitting
+          </h3>
           <p class="mt-3">
             Our NVQ-qualified installers are experts at fitting carpets of all types—from luxury Saxony 
-            and durable twist piles to budget-friendly bleachable options. We handle the entire process 
+            and durable twist piles to budget-friendly bleach-cleanable options. We handle the entire process 
             including underlay, grippers, and door strips to ensure a perfect finish.
           </p>
           <ul class="list-unstyled mb-3">
             <li>• <strong>Free measuring</strong> in the comfort of your home</li>
             <li>• Competitive pricing &amp; <strong>price matching</strong></li>
-            <li>• Quick turnaround and high-quality workmanship</li>
+            <li>• Quick turnaround &amp; high-quality workmanship</li>
           </ul>
-          <a href="contact.html" class="btn btn-brown">
+          <!-- Different color button for each service -->
+          <a href="contact.html" class="btn" style="background-color: var(--tan); color: #fff;">
             Book a Carpet Fitting
           </a>
         </div>
@@ -177,11 +170,8 @@
   </section>
 
   <!-- SERVICE SECTION: STAIR RUNNERS (WAVE DIVIDER TOP) -->
-  <div class="wave-divider wave-top">
-    <svg viewBox="0 0 500 50" preserveAspectRatio="none">
-      <path d="M0,0 C150,50 350,0 500,50 L500,00 L0,0 Z" style="fill:#FFFDF9;"></path>
-    </svg>
-  </div>
+  <!-- Cream background, darker text -->
+ 
   <section class="py-5 bg-cream">
     <div class="container">
       <div class="row align-items-center mb-5 flex-md-row-reverse">
@@ -193,10 +183,12 @@
           >
         </div>
         <div class="col-md-6">
-          <h3 class="text-brown" style="font-family: 'Montserrat', sans-serif;">Stair Runner Installation</h3>
+          <h3 class="text-brown" style="font-family: 'Montserrat', sans-serif;">
+            Stair Runner Installation
+          </h3>
           <p class="mt-3">
             Elevate your staircase with a custom-made runner. We offer a range of colours, patterns, 
-            and whipping finishes to reflect your personal style. Whether you prefer a bold striped runner 
+            and whipping finishes to reflect your personal style. Whether you prefer a bold stripe 
             or a subtle solid tone, we’ll transform your stairs into a stunning focal point.
           </p>
           <ul class="list-unstyled mb-3">
@@ -204,7 +196,8 @@
             <li>• Optional decorative rods for a timeless look</li>
             <li>• Perfect for hallways, landings &amp; multi-level homes</li>
           </ul>
-          <a href="contact.html" class="btn btn-brown">
+          <!-- Different color button -->
+          <a href="contact.html" class="btn" style="background-color: var(--brown); color: #fff;">
             Transform Your Stairs
           </a>
         </div>
@@ -213,12 +206,9 @@
   </section>
 
   <!-- SERVICE SECTION: VINYL FLOORING (WAVE DIVIDER BOTTOM) -->
-  <div class="wave-divider wave-bottom">
-    <svg viewBox="0 0 500 50" preserveAspectRatio="none">
-      <path d="M0,50 C150,0 350,50 500,0 L500,50 L0,50 Z" style="fill:#FFFDF9;"></path>
-    </svg>
-  </div>
-  <section class="py-5 bg-light">
+  <!-- Tan background, white text -->
+
+  <section class="py-5" style="background-color: var(--tan); color: #fff;">
     <div class="container">
       <div class="row align-items-center mb-5">
         <div class="col-md-6 pe-md-5 mb-4 mb-md-0">
@@ -229,7 +219,9 @@
           >
         </div>
         <div class="col-md-6">
-          <h3 class="text-brown" style="font-family: 'Montserrat', sans-serif;">Vinyl Flooring</h3>
+          <h3 style="font-family: 'Montserrat', sans-serif;">
+            Vinyl Flooring
+          </h3>
           <p class="mt-3">
             Ideal for kitchens, bathrooms, and busy family rooms, vinyl flooring offers both durability 
             and style. Our selection includes wood-look, stone-look, and abstract patterns, giving you 
@@ -240,7 +232,8 @@
             <li>• Wide range of textures &amp; finishes</li>
             <li>• Expertly fitted for a flawless result</li>
           </ul>
-          <a href="contact.html" class="btn btn-brown">
+          <!-- Different color button -->
+          <a href="contact.html" class="btn" style="background-color: var(--brownish); color: #fff;">
             See Our Vinyl Range
           </a>
         </div>
@@ -249,12 +242,9 @@
   </section>
 
   <!-- SERVICE SECTION: CUSTOM MATS & WHIPPING (WAVE DIVIDER TOP) -->
-  <div class="wave-divider wave-top">
-    <svg viewBox="0 0 500 50" preserveAspectRatio="none">
-      <path d="M0,0 C150,50 350,0 500,50 L500,00 L0,0 Z" style="fill:#FFFDF9;"></path>
-    </svg>
-  </div>
-  <section class="py-5 bg-cream">
+  <!-- Brownish background, white text -->
+  
+  <section class="py-5" style="background-color: var(--brownish); color: #fff;">
     <div class="container">
       <div class="row align-items-center mb-5 flex-md-row-reverse">
         <div class="col-md-6 ps-md-5 mb-4 mb-md-0">
@@ -265,10 +255,12 @@
           >
         </div>
         <div class="col-md-6">
-          <h3 class="text-brown" style="font-family: 'Montserrat', sans-serif;">Custom Mats &amp; Whipping</h3>
+          <h3 style="font-family: 'Montserrat', sans-serif;">
+            Custom Mats &amp; Whipping
+          </h3>
           <p class="mt-3">
             Don’t let leftover carpet go to waste. Our whipping service transforms spare pieces into 
-            elegant mats for doorways, hallways, pet areas, or even outdoor steps. Maintain a consistent 
+            elegant mats for doorways, hallways, or even outdoor steps. Maintain a consistent 
             style throughout your home and reduce waste in one go.
           </p>
           <ul class="list-unstyled mb-3">
@@ -276,7 +268,8 @@
             <li>• Bespoke shapes &amp; sizes available</li>
             <li>• Save costs by upcycling offcuts</li>
           </ul>
-          <a href="contact.html" class="btn btn-brown">
+          <!-- Different color button -->
+          <a href="contact.html" class="btn" style="background-color: var(--cream); color: #3B2F2F;">
             Personalise Your Mats
           </a>
         </div>
@@ -284,12 +277,7 @@
     </div>
   </section>
 
-  <!-- PORTFOLIO / GALLERY SECTION (WAVE DIVIDER BOTTOM) -->
-  <div class="wave-divider wave-bottom">
-    <svg viewBox="0 0 500 50" preserveAspectRatio="none">
-      <path d="M0,50 C150,0 350,50 500,0 L500,50 L0,50 Z" style="fill:#FFFDF9;"></path>
-    </svg>
-  </div>
+ 
   <section class="py-5 bg-light">
     <div class="container">
       <div class="row mb-5 text-center">
@@ -297,7 +285,7 @@
           <h2 class="section-heading">Our Recent Projects</h2>
           <p class="fs-5">
             Take a look at our latest transformations—from cosy living rooms to grand staircases. 
-            Each project illustrates our meticulous attention to detail and dedication to customer satisfaction.
+            Each project shows our meticulous attention to detail and dedication to customer satisfaction.
           </p>
         </div>
       </div>
@@ -364,7 +352,7 @@
                 living room carpet. The service was swift, affordable, and the results are top-notch. 
                 Highly recommended!"
               </blockquote>
-              <footer class="blockquote-footer">
+              <footer class="blockquote-footer bg-white text-dark">
                 Sarah D., Welwyn Garden City
               </footer>
             </div>
@@ -377,7 +365,7 @@
                 and that's exactly what we got. Thank you for the professional service 
                 and attention to detail."
               </blockquote>
-              <footer class="blockquote-footer">
+              <footer class="blockquote-footer bg-white text-dark">
                 Mike H., St Albans
               </footer>
             </div>
@@ -449,7 +437,7 @@
               >
                 <div class="accordion-body">
                   <p>
-                    Prices vary based on carpet quality, room size, and subfloor preparation. 
+                    Prices vary based on carpet quality, room size, and subfloor prep. 
                     Our free measuring service ensures accurate quotes, and we often match 
                     or beat local competitor pricing. Request a <a href="contact.html">free estimate</a> 
                     to see how we compare.
@@ -481,8 +469,8 @@
                   <p>
                     Yes! We typically serve Hatfield, Welwyn Garden City, St Albans,
                     Cheshunt, Harpenden, and other nearby areas within a 20–40 mile radius.
-                    For larger projects, we're willing to travel slightly further.
-                    Just <a href="contact.html">get in touch</a> to discuss your location.
+                    For larger projects, we're happy to travel further—just 
+                    <a href="contact.html">get in touch</a> to discuss your location.
                   </p>
                 </div>
               </div>
@@ -502,8 +490,7 @@
       </h2>
       <p class="fs-5 mb-4">
         Contact our friendly team to book a free measuring appointment or learn more 
-        about our services. We’re dedicated to helping you find the perfect flooring 
-        for your home.
+        about our services. We’re dedicated to helping you find the perfect flooring.
       </p>
       <a href="contact.html" class="btn btn-tan btn-lg">
         Get a Free Quote
@@ -512,10 +499,14 @@
   </section>
 
   <!-- FOOTER -->
-  <footer class="border-top py-4 bg-light">
-    <div class="container text-center">
-      <p class="mb-1">&copy; 2025 Soft Touch Carpets &amp; Elegant Edges</p>
-      <p class="mb-0">Proudly serving Hertfordshire and beyond | NVQ-qualified fitters</p>
+  <footer style="background-color: var(--brown); color: #fff;">
+    <div class="container footer-content">
+      <p>&copy; 2025 Soft Touch Carpets &amp; Elegant Edges</p>
+      <p>Proudly serving Hertfordshire &amp; Beyond</p>
+      <p>
+        Call: 07768 106205 | Email: 
+        <a href="mailto:info@softtouchcarpets.com" style="color:#fff;">info@softtouchcarpets.com</a>
+      </p>
     </div>
   </footer>
 
