--- a/contact.html
+++ b/contact.html
@@ -5,39 +5,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Bootstrap CSS -->
-  <link 
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
-    rel="stylesheet" 
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
     crossorigin="anonymous"
   >
 
   <!-- Page-Specific Styles -->
+  <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="contact.css" />
 
   <!-- SEO Meta Tags -->
   <title>Contact Soft Touch Carpets &amp; Elegant Edges | Hertfordshire Flooring Experts</title>
-  <meta 
-    name="description" 
+  <meta
+    name="description"
     content="Get in touch with Soft Touch Carpets & Elegant Edges for free measures, quotes, or more information on carpet fitting, stair runners, vinyl, and custom mats."
   />
-  <meta 
-    name="keywords" 
+  <meta
+    name="keywords"
     content="contact, carpeting, stair runners, vinyl flooring, mat services, Hertfordshire"
   />
 
   <!-- Google Fonts (Playfair Display, Montserrat, Nunito) -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link 
-    href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700;900&family=Montserrat:wght@400;700&family=Nunito:wght@300;400;700&display=swap" 
+  <link
+    href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700;900&family=Montserrat:wght@400;700&family=Nunito:wght@300;400;700&display=swap"
     rel="stylesheet"
   >
 
-  <!-- Web3Forms 
-       See https://web3forms.com/ for details.
-       Replace 'YOUR_ACCESS_KEY' with your actual key.
-  -->
+  <!-- Web3Forms (Replace 'YOUR_ACCESS_KEY' with your actual key) -->
 
   <!-- Client-side spam check for "seo"/"top google"; honeypot usage. -->
   <script defer>
@@ -56,20 +54,19 @@
 </head>
 <body>
   <!-- NAVBAR (Sticky) -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-brown sticky-top shadow-sm ">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-brown sticky-top shadow-sm">
     <div class="container">
       <a class="navbar-brand d-flex flex-column text-lg-start" href="index.html">
         <span class="fw-bold fs-5">Soft Touch</span>
         <span class="fs-6">Carpets & Elegant Edges</span>
       </a>
-      
-      <button 
-        class="navbar-toggler" 
-        type="button" 
-        data-bs-toggle="collapse" 
-        data-bs-target="#mainNavbar" 
-        aria-controls="mainNavbar" 
-        aria-expanded="false" 
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#mainNavbar"
+        aria-controls="mainNavbar"
+        aria-expanded="false"
         aria-label="Toggle navigation"
       >
         <span class="navbar-toggler-icon"></span>
@@ -94,9 +91,8 @@
     </div>
   </nav>
 
-
-  <!-- HERO / BANNER SECTION -->
-  <header class="contact-hero d-flex align-items-center">
+  <!-- HERO / BANNER SECTION (Parallax) -->
+  <header class="contact-hero d-flex align-items-center justify-content-center">
     <div class="hero-overlay"></div>
     <div class="container text-center text-white">
       <h1 class="display-4 hero-title mb-3">Let's Connect</h1>
@@ -111,12 +107,11 @@
   <section class="py-5 bg-cream" id="contactSection">
     <div class="container">
       <div class="row g-5 align-items-center">
+        <!-- Contact Info -->
         <div class="col-lg-6">
-          <h2 class="section-heading mb-4" style="font-family: 'Playfair Display', serif;">
-            Get a quote
-          </h2>
+          <h2 class="section-heading mb-4">Get a Quote</h2>
           <p class="fs-5 mb-4">
-            Whether you have a question about our carpet fitting, stair runner services, 
+            Whether you have a question about our carpet fitting, stair runner services,
             vinyl flooring, or want a free quote, our team is here to help.
           </p>
           <ul class="list-unstyled fs-5">
@@ -136,19 +131,20 @@
             </li>
           </ul>
           <p class="small text-muted">
-            We serve Hertfordshire and a 20–40 mile radius. For larger projects, 
+            We serve Hertfordshire and a 20–40 mile radius. For larger projects,
             we can travel further—just ask.
           </p>
         </div>
+
+        <!-- Embedded Map -->
         <div class="col-lg-6">
-          <!-- Embed a real map or directions if desired -->
           <div class="map-wrapper position-relative rounded shadow overflow-hidden">
-            <iframe 
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2381.3578177238225!2d-0.22388158431624517!3d51.76262610279852!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48763a9b374501af%3A0xfd10df5522725673!2sHatfield%2C%20UK!5e0!3m2!1sen!2suk!4v1689000000000!5m2!1sen!2suk" 
-              width="100%" 
-              height="350" 
-              style="border:0;" 
-              allowfullscreen 
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2381.3578177238225!2d-0.22388158431624517!3d51.76262610279852!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48763a9b374501af%3A0xfd10df5522725673!2sHatfield%2C%20UK!5e0!3m2!1sen!2suk!4v1689000000000!5m2!1sen!2suk"
+              width="100%"
+              height="350"
+              style="border:0;"
+              allowfullscreen
               loading="lazy"
               referrerpolicy="no-referrer-when-downgrade"
             ></iframe>
@@ -166,13 +162,13 @@
           <div class="p-4 bg-white rounded shadow-sm">
             <h3 class="mb-4 text-brown">Send Us a Message</h3>
             <p class="mb-4">
-              Fill out the form below and we’ll be in touch soon. We typically respond 
+              Fill out the form below and we’ll be in touch soon. We typically respond
               within 24 hours on weekdays.
             </p>
 
-            <form 
-              action="https://api.web3forms.com/submit" 
-              method="POST" 
+            <form
+              action="https://api.web3forms.com/submit"
+              method="POST"
               id="contactForm"
               class="position-relative"
               novalidate
@@ -188,32 +184,32 @@
 
               <div class="mb-3">
                 <label for="name" class="form-label fw-semibold">Name</label>
-                <input 
-                  type="text" 
-                  id="name" 
+                <input
+                  type="text"
+                  id="name"
                   name="name"
-                  class="form-control" 
+                  class="form-control"
                   required
                 >
               </div>
 
               <div class="mb-3">
                 <label for="email" class="form-label fw-semibold">Email</label>
-                <input 
-                  type="email" 
+                <input
+                  type="email"
                   id="email"
                   name="email"
-                  class="form-control" 
+                  class="form-control"
                   required
                 >
               </div>
 
               <div class="mb-3">
                 <label for="phone" class="form-label fw-semibold">Phone</label>
-                <input 
-                  type="tel" 
+                <input
+                  type="tel"
                   id="phone"
-                  name="phone" 
+                  name="phone"
                   class="form-control"
                   placeholder="Optional"
                 >
@@ -221,11 +217,11 @@
 
               <div class="mb-4">
                 <label for="message" class="form-label fw-semibold">Message</label>
-                <textarea 
+                <textarea
                   id="message"
                   name="message"
-                  class="form-control" 
-                  rows="5" 
+                  class="form-control"
+                  rows="5"
                   required
                 ></textarea>
               </div>
@@ -251,7 +247,7 @@
         Need Urgent Assistance?
       </h2>
       <p class="lead mb-4">
-        Give us a call and speak directly to our friendly team. We’re always happy to chat about 
+        Give us a call and speak directly to our friendly team. We’re always happy to chat about
         your flooring questions, quotes, or special requests.
       </p>
       <a href="tel:+447768106205" class="btn btn-tan btn-lg">Call Us Now</a>
@@ -259,7 +255,7 @@
   </section>
 
   <!-- FOOTER -->
-  <footer class="border-top py-4 bg-light">
+  <footer class="border-top py-4 bg-brown">
     <div class="container text-center">
       <p class="mb-1">&copy; 2025 Soft Touch Carpets &amp; Elegant Edges</p>
       <p class="mb-0">Family-Run, NVQ-Qualified, Serving Hertfordshire &amp; Beyond</p>
@@ -267,9 +263,9 @@
   </footer>
 
   <!-- Bootstrap JS Bundle -->
-  <script 
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"
   ></script>
 </body>
